changed about page

--- a/app/views/includes/headFront.hbs
+++ b/app/views/includes/headFront.hbs
@@ -26,4 +26,5 @@
   <link href="/css/compiled/slider.css" rel="stylesheet">
   <link href="/css/views/pricing.css" rel="stylesheet">
   <link href="/css/views/footer.css" rel="stylesheet">
+  <link href="/css/views/about.css" rel="stylesheet">
 </head>
