--- a/app/views/pages/about.hbs
+++ b/app/views/pages/about.hbs
@@ -1,4 +1,236 @@
-<div class="container">
+<html><head>
+	<title>Business Template</title>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+	<!-- Styles -->
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link type="text/css" href="css/compiled/bootstrap-overrides.css" rel="stylesheet">
+    <link href="css/compiled/theme.css" type="text/css" rel="stylesheet">
+
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic">
+
+    <link media="screen" type="text/css" href="css/compiled/about.css" rel="stylesheet">
+    <link media="screen, projection" href="css/lib/animate.css" type="text/css" rel="stylesheet">
+    <link media="screen" type="text/css" href="css/lib/flexslider.css" rel="stylesheet">
+
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
+<body style="padding-top: 0px;">
+     <div role="navigation" class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button data-target=".navbar-ex1-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><strong>CLEAN CANVAS</strong></a>
+            </div>
+
+            <div role="navigation" class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">HOME</a></li>
+                    <li class="active"><a href="about-us.html">ABOUT US</a></li>
+                    <li class="dropdown">
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">PAGES <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="features.html">Features</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="portfolio-item.html">Portfolio Item</a></li>
+                            <li><a href="coming-soon.html">Coming Soon</a></li>
+                            <li><a href="sign-in.html">Sign in</a></li>
+                            <li><a href="sign-up.html">Sign up</a></li>
+                            <li><a href="backgrounds.html">Backgrounds</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="pricing.html">PRICING</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="sign-up.html">Sign up</a></li>
+                    <li><a href="sign-in.html">Sign in</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div id="aboutus">
+        <div class="container">
+            <div class="section_header">
+                <h3>About Us</h3>    
+            </div>
+            <div class="row">
+                <div class="col-sm-6 intro">
+                 <p>
+            SolarMongo has had relationships with solar contractors and in 2013, research began on the current way of managing solar customers and leads information. The research proved a need to have a mobile solution for contractors that are constantly outside the office as well as a centralized collaborative system that gives you access to all your solar business information in one place. SolarMongo can reduce cycle time by 40% by automating and tracking paperwork electronically, and providing a mobile collaboration platform for all stakeholders of the solar install process.
+        </p>   
+                </div>
+                <div class="col-sm-6">
+                    <img src="/img/about1.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="team">
+        <div class="container">
+            <div class="section_header">
+                <h3>Meet our Team</h3>
+            </div>
+
+            <div class="row people">
+                <div class="row row1">
+                    <div class="col-sm-6 bio_box">
+                        <img alt="" src="img/ale.png">
+                        <div class="info">
+                            <p class="name">Alejandra Galvan Castillo</p>
+                            <p class="area">Creative Director</p>
+                            <a class="facebook" href="#">
+                                <span class="socialicons ico1"></span>
+                                <span class="socialicons_h ico1h"></span>
+                            </a>
+                            <a class="twitter" href="#">
+                                <span class="socialicons ico2"></span>
+                                <span class="socialicons_h ico2h"></span>
+                            </a>
+                            <a class="flickr" href="#">
+                                <span class="socialicons ico4"></span>
+                                <span class="socialicons_h ico4h"></span>
+                            </a>
+                            <a class="dribble" href="#">
+                                <span class="socialicons ico6"></span>
+                                <span class="socialicons_h ico6h"></span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 bio_box bio_boxr">
+                        <img alt="" src="img/ale.png">
+                        <div class="info">
+                            <p class="name">Alejandra Galvan Castillo</p>
+                            <p class="area">Creative Director</p>
+                            <a class="facebook" href="#">
+                                <span class="socialicons ico1"></span>
+                                <span class="socialicons_h ico1h"></span>
+                            </a>
+                            <a class="twitter" href="#">
+                                <span class="socialicons ico2"></span>
+                                <span class="socialicons_h ico2h"></span>
+                            </a>
+                            <a class="flickr" href="#">
+                                <span class="socialicons ico4"></span>
+                                <span class="socialicons_h ico4h"></span>
+                            </a>
+                            <a class="dribble" href="#">
+                                <span class="socialicons ico6"></span>
+                                <span class="socialicons_h ico6h"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row row1">
+                    <div class="col-sm-6 bio_box">
+                        <img alt="" src="img/ale.png">
+                        <div class="info">
+                            <p class="name">Alejandra Galvan Castillo</p>
+                            <p class="area">Creative Director</p>
+                            <a class="facebook" href="#">
+                                <span class="socialicons ico1"></span>
+                                <span class="socialicons_h ico1h"></span>
+                            </a>
+                            <a class="twitter" href="#">
+                                <span class="socialicons ico2"></span>
+                                <span class="socialicons_h ico2h"></span>
+                            </a>
+                            <a class="flickr" href="#">
+                                <span class="socialicons ico4"></span>
+                                <span class="socialicons_h ico4h"></span>
+                            </a>
+                            <a class="dribble" href="#">
+                                <span class="socialicons ico6"></span>
+                                <span class="socialicons_h ico6h"></span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 bio_box bio_boxr">
+                        <img alt="" src="img/ale.png">
+                        <div class="info">
+                            <p class="name">Alejandra Galvan Castillo</p>
+                            <p class="area">Creative Director</p>
+                            <a class="facebook" href="#">
+                                <span class="socialicons ico1"></span>
+                                <span class="socialicons_h ico1h"></span>
+                            </a>
+                            <a class="twitter" href="#">
+                                <span class="socialicons ico2"></span>
+                                <span class="socialicons_h ico2h"></span>
+                            </a>
+                            <a class="flickr" href="#">
+                                <span class="socialicons ico4"></span>
+                                <span class="socialicons_h ico4h"></span>
+                            </a>
+                            <a class="dribble" href="#">
+                                <span class="socialicons ico6"></span>
+                                <span class="socialicons_h ico6h"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="process">
+        <div class="container">
+            <div class="section_header">
+                <h3>Our Process</h3>
+            </div>
+            <div class="row services_circles">
+                <div class="col-sm-4 description">
+                    <div class="text active">
+                        <h4>Plan what you need.</h4>
+                        <p>
+                            There are many variations of passages of  this suffered alteration in some form, by injected look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to making this the first true generator  Internet.</p>
+                    </div>
+                    <div class="text">
+                        <h4>Develop your product or service.</h4>
+                        <p>
+                            There are many variations of passages of  this suffered alteration in some form, by injected look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to 
+                            making this the first true generator  Internet.</p>
+                    </div>
+                    <div class="text">
+                        <h4>Design this theme to your needs.</h4>
+                        <p>
+                            There are many variations of passages of  this suffered alteration in some form, by injected look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to making this the first true generator  Internet.</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-7 areas">
+                    <div class="circle active">
+                        <img src="img/plan.png">
+                        <span>Plan</span>
+                    </div>
+                    <div class="circle">
+                        <img src="img/develop.png">
+                        <span>Develop</span>
+                    </div>
+                    <div class="circle last_circle">
+                        <img src="img/design.png">
+                        <span>Design</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+<!--<div class="container">
 	<div class="jumbotron">
 		<h1>About Us</h1>
 		<br />
@@ -17,4 +249,4 @@
 	<div class="footer">
 		<p>&copy; SolarMongo 2014</p>
 	</div>
-</div>
+</div>    -->
