these are my changes

--- a/app/views/includes/footer.hbs
+++ b/app/views/includes/footer.hbs
@@ -1,3 +1,4 @@
+<footer id="footer">
 <div class="container">
             <div class="row info">
                 <div class="col-sm-6 residence">
@@ -50,3 +51,4 @@
                 </div>            
             </div>
         </div>
+</footer>
