Changed About Us Page

--- a/app/views/pages/about.hbs
+++ b/app/views/pages/about.hbs
@@ -65,9 +65,10 @@
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
-                 <p>
+                    <h6>History</h6>
+                    <p>
             SolarMongo has had relationships with solar contractors and in 2013, research began on the current way of managing solar customers and leads information. The research proved a need to have a mobile solution for contractors that are constantly outside the office as well as a centralized collaborative system that gives you access to all your solar business information in one place. SolarMongo can reduce cycle time by 40% by automating and tracking paperwork electronically, and providing a mobile collaboration platform for all stakeholders of the solar install process.
-        </p>   
+                    </p>   
                 </div>
                 <div class="col-sm-6">
                     <img src="/img/about1.jpg">
@@ -76,127 +77,18 @@
         </div>
     </div>
 
-    <div id="team">
-        <div class="container">
-            <div class="section_header">
-                <h3>Meet our Team</h3>
-            </div>
-
-            <div class="row people">
-                <div class="row row1">
-                    <div class="col-sm-6 bio_box">
-                        <img alt="" src="img/ale.png">
-                        <div class="info">
-                            <p class="name">Alejandra Galvan Castillo</p>
-                            <p class="area">Creative Director</p>
-                            <a class="facebook" href="#">
-                                <span class="socialicons ico1"></span>
-                                <span class="socialicons_h ico1h"></span>
-                            </a>
-                            <a class="twitter" href="#">
-                                <span class="socialicons ico2"></span>
-                                <span class="socialicons_h ico2h"></span>
-                            </a>
-                            <a class="flickr" href="#">
-                                <span class="socialicons ico4"></span>
-                                <span class="socialicons_h ico4h"></span>
-                            </a>
-                            <a class="dribble" href="#">
-                                <span class="socialicons ico6"></span>
-                                <span class="socialicons_h ico6h"></span>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 bio_box bio_boxr">
-                        <img alt="" src="img/ale.png">
-                        <div class="info">
-                            <p class="name">Alejandra Galvan Castillo</p>
-                            <p class="area">Creative Director</p>
-                            <a class="facebook" href="#">
-                                <span class="socialicons ico1"></span>
-                                <span class="socialicons_h ico1h"></span>
-                            </a>
-                            <a class="twitter" href="#">
-                                <span class="socialicons ico2"></span>
-                                <span class="socialicons_h ico2h"></span>
-                            </a>
-                            <a class="flickr" href="#">
-                                <span class="socialicons ico4"></span>
-                                <span class="socialicons_h ico4h"></span>
-                            </a>
-                            <a class="dribble" href="#">
-                                <span class="socialicons ico6"></span>
-                                <span class="socialicons_h ico6h"></span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row row1">
-                    <div class="col-sm-6 bio_box">
-                        <img alt="" src="img/ale.png">
-                        <div class="info">
-                            <p class="name">Alejandra Galvan Castillo</p>
-                            <p class="area">Creative Director</p>
-                            <a class="facebook" href="#">
-                                <span class="socialicons ico1"></span>
-                                <span class="socialicons_h ico1h"></span>
-                            </a>
-                            <a class="twitter" href="#">
-                                <span class="socialicons ico2"></span>
-                                <span class="socialicons_h ico2h"></span>
-                            </a>
-                            <a class="flickr" href="#">
-                                <span class="socialicons ico4"></span>
-                                <span class="socialicons_h ico4h"></span>
-                            </a>
-                            <a class="dribble" href="#">
-                                <span class="socialicons ico6"></span>
-                                <span class="socialicons_h ico6h"></span>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 bio_box bio_boxr">
-                        <img alt="" src="img/ale.png">
-                        <div class="info">
-                            <p class="name">Alejandra Galvan Castillo</p>
-                            <p class="area">Creative Director</p>
-                            <a class="facebook" href="#">
-                                <span class="socialicons ico1"></span>
-                                <span class="socialicons_h ico1h"></span>
-                            </a>
-                            <a class="twitter" href="#">
-                                <span class="socialicons ico2"></span>
-                                <span class="socialicons_h ico2h"></span>
-                            </a>
-                            <a class="flickr" href="#">
-                                <span class="socialicons ico4"></span>
-                                <span class="socialicons_h ico4h"></span>
-                            </a>
-                            <a class="dribble" href="#">
-                                <span class="socialicons ico6"></span>
-                                <span class="socialicons_h ico6h"></span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div id="process">
         <div class="container">
             <div class="section_header">
-                <h3>Our Process</h3>
+                <h3>Our Mission</h3>
             </div>
             <div class="row services_circles">
                 <div class="col-sm-4 description">
                     <div class="text active">
                         <h4>Plan what you need.</h4>
                         <p>
-                            There are many variations of passages of  this suffered alteration in some form, by injected look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to making this the first true generator  Internet.</p>
+                            SolarMongo's mission is to produce a more efficient workflow for every solar business. We strive to help clients understand how mobile technologies will cut their costs and time involved in their business workflow. We are constantly implementing new features in our system to give business owners the tools they need anywhere and any time they are needed. SolarMongo is the means by which our clients will improve their business.</p>
                     </div>
                     <div class="text">
                         <h4>Develop your product or service.</h4>
@@ -212,16 +104,16 @@
                 </div>
 
                 <div class="col-sm-7 areas">
-                    <div class="circle active">
-                        <img src="img/plan.png">
+                    <div class="circle">
+                        <img src="img/about.3.jpg">
                         <span>Plan</span>
                     </div>
                     <div class="circle">
-                        <img src="img/develop.png">
+                        <img src="img/about.4.jpg">
                         <span>Develop</span>
                     </div>
                     <div class="circle last_circle">
-                        <img src="img/design.png">
+                        <img src="img/about.5.jpg">
                         <span>Design</span>
                     </div>
                 </div>
