--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -11,14 +11,18 @@
 <script type="text/javascript" src="/js/thirdparty/jquery.flot.resize.js"></script>
 <script type="text/javascript" src="/js/thirdparty/theme.js"></script>
 <script type="text/javascript" src="/js/thirdparty/googleAnalytics.js"></script>
+
+<!-- File ng-file-upload SHIM-->
+<script src="/lib/ng-file-upload/angular-file-upload-shim.min.js"></script> 
+
 <!--AngularJS-->
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-cookies/angular-cookies.js"></script>
 <script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
-<!--AngularFire and Firebase-->
-<script src="https://cdn.firebase.com/v0/firebase.js"></script>
-<script type="text/javascript" src="/lib/angularfire/angularfire.min.js"></script>
+
+<!-- File ng-file-upload -->
+<script src="/lib/ngUpload/ng-upload.min.js"></script> 
 
 <!--Angular UI-->
 <script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.js"></script>
