--- a/app/views/includes/footer.hbs
+++ b/app/views/includes/footer.hbs
@@ -1,62 +1,17 @@
 <footer id="footer">
     <div class="container">
-        <div class="row sections">
-            <div class="col-sm-4 recent_posts">
-                <h3 class="footer_header">
-                    Recent Posts
-                </h3>
-                <div class="post">
-                    <a href="blogpost.html">
-                        <img class="img-circle" src="img/recent_post1.png">
-                    </a>
-                    <div class="date">
-                        Wed, 12 Dec
-                    </div>
-                    <a class="title" href="blogpost.html">
-                        Randomised words which don't look embarrasing hidden.
-                    </a>
-                </div>
-                <div class="post">
-                    <a href="blogpost.html">
-                        <img class="img-circle" src="img/recent_post2.png">
-                    </a>
-                    <div class="date">
-                        Mon, 12 Dec
-                    </div>
-                    <a class="title" href="blogpost.html">
-                        Randomised words which don't look embarrasing hidden.
-                    </a>
-                </div>
+        <div class="row info">
+            <div class="col-sm-6 residence">
+                <ul>
+                    <li>2301 East Lamar Blvd. Suite 140. City, Arlington.</li>
+                    <li>United States, Zip Code TX 76006.</li>
+                </ul>
             </div>
-            <div class="col-sm-4 testimonials">
-                <h3 class="footer_header">
-                    Testimonials
-                </h3>
-                <div class="wrapper">
-                    <div class="quote">
-                        <span>“</span>
-                        There are many variations of passages of randomised words which don't look even slightly believable. You need to be sure there isn't anything embarrassing of text.
-                        <span></span>
-                    </div>
-                    <div class="author">
-                        <img src="img/user-display.png">
-                        <div class="name">Alejandra Galvan Castillo</div>
-                        <div class="info">
-                            Details Canvas
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 contact">
-                <h3 class="footer_header">
-                    Contact
-                </h3>
-                <form method="post" action="#">
-                    <input type="text" placeholder="Your name">
-                    <input type="text" placeholder="Your email">
-                    <textarea placeholder="Message" rows="3"></textarea>
-                    <input type="submit" value="Send">
-                </form>
+            <div class="col-sm-5 touch">
+                <ul>
+                    <li><strong>P.</strong> 1 817 274 2933</li>
+                    <li><strong>E.</strong><a href="#"> support@solarmongo.com</a></li>
+                </ul>
             </div>
         </div>
         <div class="row credits">
@@ -95,7 +50,7 @@
                 </div>
                 <div class="row copyright">
                     <div class="col-md-12">
-                        &copy; 2013 Clean Canvas. All rights reserved. Theme by Detail Canvas.
+                        &copy; 2014 SolarMongo. All rights reserved.
                     </div>
                 </div>
             </div>            
