--- a/public/css/views/home.css
+++ b/public/css/views/home.css
@@ -2,6 +2,7 @@ body{
 	 font-family: 'Lato',sans-serif !important;
 	padding-top: 60px;
   	padding-bottom: 0px;
+  	background: url(/img/small_grid.png);
 }
 
 .no-jumbotron{
@@ -25,3 +26,4 @@ body{
 	margin-bottom: 70px;
 	text-align: center;
 }
+`
