--- a/app/views/pages/contact.hbs
+++ b/app/views/pages/contact.hbs
@@ -1,14 +1,23 @@
-<div class="container">
-  <div class="jumbotron">
-    <h1>Contact Us</h1>
-    <br />
-    <p>
-      We want to talk with you. Allow us to help streamline your sales and make your workflow easier and faster than ever.
-    </p>
-    <br />
-    <div class="container">
-      <div class="row header no-jumbotron">
-        <div class="row form-wrapper">
+<div id="in_pricing2">
+  <div class="container">
+    <div class="section_header">
+  </div>
+  <div class="row charts_wrapp">
+    <div class="col-sm-12">
+      <div class="plan">
+        <div class="wrapper">
+          <h3>Contact Us</h3>
+          <br />
+        <div class="features">
+          <p>
+         <h4>
+            We want to talk with you. Allow us to help streamline your sales and make your workflow easier and faster than ever.
+      </h4>
+<p></p>
+</div>
+<br />
+<br />
+<div class="row form-wrapper">
           <div class="col-md-12">
             <form class="form-horizontal" role='form' action="sendContactEmail" method="post">
               <div class="form-group">
@@ -55,10 +64,16 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+</div>
+</div>
+</div>
   <hr/>
   <div class="footer">
     <p>&copy; SolarMongo 2014</p>
   </div>
+</div>
+</div>
+</div>
+
+  
 </div>
