--- a/public/css/views/home.css
+++ b/public/css/views/home.css
@@ -2,7 +2,7 @@ body{
 	 font-family: 'Lato',sans-serif !important;
 	padding-top: 60px;
   	padding-bottom: 0px;
-  	background: url(/img/diamond.png);
+  	background: url(/img/paper.png);
 }
 
 .no-jumbotron{
