--- a/public/css/views/footer.css
+++ b/public/css/views/footer.css
@@ -1,9 +1,10 @@
 #footer {
     background: linear-gradient(to bottom, #2C3742 0%, #28303A 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
     color: #FFFFFF;
-    margin-top: 140px;
-    min-height: 260px;
-    padding-top: 35px;
+    margin-top: 67px;
+    min-height: 100px;
+    padding-top: 39px;
+    text-align:center;
 }
 #footer .footer_header {
     color: #C4C4C4;
