--- a/app/views/pages/about.hbs
+++ b/app/views/pages/about.hbs
@@ -65,13 +65,13 @@
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
-                    <h6>History</h6>
+                    <h4>History</h4>
                     <p>
             SolarMongo has had relationships with solar contractors and in 2013, research began on the current way of managing solar customers and leads information. The research proved a need to have a mobile solution for contractors that are constantly outside the office as well as a centralized collaborative system that gives you access to all your solar business information in one place. SolarMongo can reduce cycle time by 40% by automating and tracking paperwork electronically, and providing a mobile collaboration platform for all stakeholders of the solar install process.
                     </p>   
                 </div>
                 <div class="col-sm-6">
-                    <img src="/img/about1.jpg">
+                        <img src="/img/about1.jpg" class="aboutimg">
                 </div>
             </div>
         </div>
@@ -106,15 +106,15 @@
                 <div class="col-sm-7 areas">
                     <div class="circle">
                         <img src="img/about.3.jpg">
-                        <span>Plan</span>
+                        <span>Mobile</span>
                     </div>
                     <div class="circle">
                         <img src="img/about.4.jpg">
-                        <span>Develop</span>
+                        <span>Cloud</span>
                     </div>
                     <div class="circle last_circle">
                         <img src="img/about.5.jpg">
-                        <span>Design</span>
+                        <span>Secure</span>
                     </div>
                 </div>
             </div>
