--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -16,22 +16,23 @@
     <div class="col-md-4">
       <div class="feature">
         <h2>Efficient + Automated</h2>
-        <p>Reduce your cycle time by at least 30% as well as operational costs through our automated system for tracking paperwork electronically. </p>
-        <p><a href="#" class="btn">View a demo »</a></p>
+
+          <p class="card-p">Reduce your cycle time by at least 30% as well as operational costs through our automated system for tracking paperwork electronically. </p>
+          <p class="card-p"><a href="#" class="btn">View a demo »</a></p>
       </div>
     </div>  
     <div class="col-md-4">
       <div class="feature">
       <h2>Quotes + Estimates</h2>
-      <p>Ditch the confusing spreadsheets. Explaining and generating quotes for your potential customers has never been easier.</p>
-      <p><a href="#" class="btn">Check out a mobile demo »</a></p>
+      <p class="card-p">Ditch the confusing spreadsheets. Explaining and generating quotes for your potential customers has never been easier.</p>
+      <p class="card-p"><a href="#" class="btn">Check out a mobile demo »</a></p>
     </div>
     </div>
     <div class="col-md-4">
       <div class="feature">
       <h2>Paperless + Mobility</h2>
-      <p>With our mobile apps and mobile web technologies, sales and installation in solar has never been more paperless and automated.</p>
-      <p><a href="#" class="btn">View product video »</a></p>
+      <p class="card-p">With our mobile apps and mobile web technologies, sales and installation in solar has never been more paperless and automated.</p>
+      <p class="card-p"><a href="#" class="btn">View product video »</a></p>
     </div>
     </div>
   </div>
