--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <div data-ng-controller="sliderController" class="slidercontainer">
+  <div data-ng-controller="sliderController" class="slidercontainer feature">
     <carousel interval="myInterval">
       <slide ng-repeat="slide in slides" active="slide.active">
         <div ng-include="slide.path"></div>
