--- a/public/views/pages/slide1.html
+++ b/public/views/pages/slide1.html
@@ -1,5 +1,5 @@
 <h1>Run your entire solar business from anywhere</h1>
-<img src="http://images.apple.com/displays/images/overview_hero2.jpg" width="950" height="300" />
+<img src="img/macbook.png" width="466" height="229">
 <!--
 <p>SolarMongo's mobile technologies give solar contractors the ability to have all their tools in their hands at all times.
 </p>
