changed css... again :)

--- a/public/views/pages/slide1.html
+++ b/public/views/pages/slide1.html
@@ -1,5 +1,12 @@
-<h1>Run your entire solar business from anywhere</h1>
-<img src="img/macbook.png" width="466" height="229">
+<div class="row">
+	<div class="col-md-5">
+		<h1>Run your entire solar business from anywhere.</h1>
+	</div>	
+	<div class="col-md-7">	
+		<img src="img/macbook.png" width="466" height="229"/>
+	</div>
+</div>		
+
 <!--
 <p>SolarMongo's mobile technologies give solar contractors the ability to have all their tools in their hands at all times.
 </p>
