--- a/public/views/pages/slide3.html
+++ b/public/views/pages/slide3.html
@@ -1,4 +1,4 @@
-<div id="slider_container" class="jumbotron">
+<div id="slider_container">
 	<h1>Generate quotes and estimates on the go!</h1>
 	<p>Ditch the confusing spreadsheets. Explaining and generating quotes for your potential customers has never been easier.</p>
 	<a class="btn btn-primary btn-success" href="\signup">Sign Up!</a>
