--- a/public/views/pages/slide4.html
+++ b/public/views/pages/slide4.html
@@ -1,4 +1,4 @@
-<div id="slider_container" class="jumbotron">
+<div id="slider_container">
 	<h1>Paperless + Mobility</h1>
 	<p>With our mobile apps and mobile web technologies, sales and installation in solar has never been more paperless and automated. All your documents are centralized making your solar business workflow easier than ever</p>
 	<a class="btn btn-primary btn-success" href="\signup">Sign Up!</a>
