--- a/public/views/pages/slide2.html
+++ b/public/views/pages/slide2.html
@@ -1,4 +1,4 @@
-<div id="slider_container" class="jumbotron">
+<div id="slider_container">
 <h1>Automated Control</h1>
 <p>Reduce your cycle time by at least 30% as well as operational costs through our automated system for tracking paperwork electronically.  </p>
 <a class="btn btn-primary btn-success" href="\signup">Sign Up!</a>
