little ipad added to slider2

--- a/public/views/pages/slide2.html
+++ b/public/views/pages/slide2.html
@@ -1,5 +1,11 @@
 <div id="slider_container">
-<h1>Automated Control</h1>
+	<div class="row">
+		<div class="col-md-5">
+			<h1>Automated Control</h1>
 <p>Reduce your cycle time by at least 30% as well as operational costs through our automated system for tracking paperwork electronically.  </p>
-<a class="btn btn-primary btn-success" href="\signup">Sign Up!</a>
-</div>
+		</div>	
+		<div class="col-md-7">	
+			<img src="img/ipad_dialog.jpg" width="400" height="240" />
+		</div>
+	</div>
+</div>		
