added card to pricing page

--- a/app/views/pages/pricing.hbs
+++ b/app/views/pages/pricing.hbs
@@ -87,14 +87,31 @@ Users
 </div>
 </div>
 </div>
-<div class="head">
 
-<h1>Features</h1>
-<h6>All inlusive with each option.</h6>
+<!-- The box I'm trying to make up -->
 
+<div class="container">  
+  <div class="row charts_wrapp">
+    <div class="col-sm-12">
+      <div class="plan">
+        <div class="wrapper">
+          <h3>Features</h3>
+          <br>
+        <div class="features">
+          <p>
+          </p>
+          <h4>
+            <u>
+           All inclusive with each option!
+            </u>
+      </h4>
+<p></p>
 </div>
- <div class="col-md-6">
-      <div class="jumbotron">
+<br>
+<br>
+<div class="row form-wrapper">
+          <div class="col-md-12">
+              <div class="col-md-6">
         <p>• Lead Manager</p>
         <p></p>
         <p>• Site survey</p>
@@ -103,10 +120,9 @@ Users
         <p></p>
         <p>• Cost estimates</p>
         <p></p>
-      </div>
- </div>       
- <div class="col-md-6">
-      <div class="jumbotron">   
+              </div>
+          
+              <div class="col-md-6">
         <p>• Solar Panel overlay technology </p>
         <p></p>
         <p>• Proposal generations </p>
@@ -114,10 +130,19 @@ Users
         <p>• Roof area estimator </p>
         <p></p>
         <p>• Cloud document storage </p>
-        <p></p>
+        <p></p> 
+              </div> 
+            
+          </div>
+        </div>
       </div>
-    </div>
+</div>
+</div>
+</div>
+  <div class="footer">
+    <p>&copy; SolarMongo 2014</p>
   </div>
+</div>
 <div id="faq">
 <div class="container">
 <div class="section_header">
