--- a/app/views/pages/demo.hbs
+++ b/app/views/pages/demo.hbs
@@ -1,4 +1,82 @@
-<div class="container">
+<div id="in_pricing2">
+  <div class="container">
+    <div class="section_header">
+  </div>
+  <div class="row charts_wrapp">
+    <div class="col-sm-12">
+      <div class="plan">
+        <div class="wrapper">
+          <h1>Request Demo</h1>
+          <br />
+        <div class="features">
+          <p>
+         <h4>
+            We want to talk with you. Allow us to help streamline your sales and make your workflow easier and faster than ever.
+      </h4>
+<p></p>
+</div>
+<br />
+<br />
+<div class="row form-wrapper">
+          <div class="col-md-12">
+            <form class="form-horizontal" role='form' action="sendContactEmail" method="post">
+              <div class="form-group">
+                <div class="col-md-2 control-label">
+                  <label>Name:</label>
+                </div>
+                <div class="col-md-5">
+                  <input class="form-control" type='text' name="firstName" data-ng-model='firstName' placeholder='First Name' maxlength='30' />
+                </div>
+                <div class="col-md-5">
+                  <input class="form-control small-inline" type='text' name="lastName" data-ng-model='lastName' placeholder='Last Name' maxlength='30' />
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-2 control-label">Company:</label>
+                <div class="col-md-10">
+                  <input class="form-control" type='text' name='companyName' data-ng-model='companyName' placeholder='Company Name' />
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-2 control-label">Phone:</label>
+                <div class="col-md-10">
+                  <input class="form-control" type='text' name='phone' data-ng-model='phone' placeholder='Phone Number' />
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-2 control-label">Email:</label>
+                <div class="col-md-10">
+                  <input class="form-control" type='text' name="email" data-ng-model='email' placeholder='example@example.com' required />
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-2 control-label">Inquiry:</label>
+                <div class="col-md-10">
+                  <textarea class="form-control" rows='5' type='text' name="inquiry" data-ng-model='inquiry' placeholder='Your inquiry here...' required></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-md-12">
+                  <button class="btn btn-success pull-right" type="submit">Submit</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+</div>
+</div>
+</div>
+  <div class="footer">
+    <p>&copy; SolarMongo 2014</p>
+  </div>
+</div>
+</div>
+</div>
+
+  
+</div>
+!--<div class="container">
   <div class="jumbotron">
     <h1>Request a product demo</h1>
     <br />
