made card on home page

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -11,7 +11,33 @@
       </slide>
     </carousel>
   </div>
-  
+  <div class="row contact">
+              
+
+  <form>
+      <div class="row form">
+          <div class="col-sm-6 row-col">
+              <div class="box">
+                  <input type="text" placeholder="Name" class="name form-control">
+                  <input type="text" placeholder="Company" class="company form-control">
+                  <input type="text" placeholder="Email" class="mail form-control">
+                  <input type="text" placeholder="Phone" class="phone form-control">
+              </div>
+          </div>
+          <div class="col-sm-6">
+              <div class="box">
+                  <textarea class="form-control" placeholder="Type a message here..."></textarea>
+              </div>
+          </div>
+      </div>
+
+      <div class="row submit">
+          <div class="col-md-3 right">
+              <input type="submit" value="Send your message">
+          </div>
+      </div>
+  </form>
+</div>
   <div class="row">
     <div class="col-md-4">
       <div class="feature">
