changed to card

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -11,7 +11,7 @@
       </slide>
     </carousel>
   </div>
-  <div class="row contact">
+  <div class="row feature">
               
 
   <form>
@@ -19,23 +19,29 @@
           <div class="col-sm-6 row-col">
               <div class="box">
                   <input type="text" placeholder="Name" class="name form-control">
-                  <input type="text" placeholder="Company" class="company form-control">
-                  <input type="text" placeholder="Email" class="mail form-control">
+                  <input type="text" placeholder="Email" class="email form-control">
                   <input type="text" placeholder="Phone" class="phone form-control">
+                  <input type="text" placeholder="Company" class="company form-control">
               </div>
           </div>
           <div class="col-sm-6">
               <div class="box">
-                  <textarea class="form-control" placeholder="Type a message here..."></textarea>
+                  <h1> Keep all of your solar leads in one place.
+                  </h1>
+                  <h3> Discover SolarMongo's mobile tools for easy quotes and estimates on the go!
+                  </h3>
+                  <p> Request a product demo. 
+                  </p>
+                  <ul>
+                    <li>CRM (Customer Relationship Management)</li>
+                    <li>Automated Control</li>
+                    <li>Iphone and Ipad mobile Apps.</li>
+                  </ul>  
               </div>
           </div>
       </div>
 
-      <div class="row submit">
-          <div class="col-md-3 right">
-              <input type="submit" value="Send your message">
-          </div>
-      </div>
+      
   </form>
 </div>
   <div class="row">
