--- a/public/css/views/home.css
+++ b/public/css/views/home.css
@@ -51,6 +51,12 @@ h2{
     padding: 40px;
     margin-top: 30px;
 }
+.feature3 {
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px 1px #E0E0E0;
+    padding: 40px;
+}
 .box {
      border-radius: 4px;
     box-shadow: 0 1px 3px 1px #E0E0E0;
@@ -60,5 +66,8 @@ h2{
 }
 .row {
     padding-top:14px;
+}
+.row-submit {
+    float:right;
 }
 
