--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -11,7 +11,39 @@
       </slide>
     </carousel>
   </div>
-  <div class="row feature">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="feature">
+        <form role="form">
+          <div class="form-group">
+            <input type="text" placeholder="Name" class="name form-control margininput">
+          <div class="form-group">  
+            <input type="text" placeholder="Email" class="email form-control margininput">
+          <div class="form-group">  
+            <input type="text" placeholder="Phone" class="phone form-control margininput">
+          <div class="form-group">  
+            <input type="text" placeholder="Company" class="company form-control margininput">
+          </div>
+          </div>
+          </div>  
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="feature3">
+         <h1> Keep all of your solar leads in one place.</h1>
+          <h3> Discover SolarMongo's mobile tools for easy quotes and estimates on the go!</h3>
+          <p> Request a product demo.</p>
+          <ul>
+            <li>CRM (Customer Relationship Management)</li>
+            <li>Automated Control</li>
+            <li>Iphone and Ipad mobile Apps.</li>
+          </ul> 
+      </div>
+    </div>
+  </div>
+  <!--<div class="row feature">
               
 
   <form>
@@ -43,7 +75,7 @@
 
       
   </form>
-</div>
+</div> -->
   <div class="row">
     <div class="col-md-4">
       <div class="feature">
