--- a/public/css/views/home.css
+++ b/public/css/views/home.css
@@ -56,6 +56,15 @@ h2{
     border-radius: 4px;
     box-shadow: 0 1px 3px 1px #E0E0E0;
     padding: 40px;
+    margin-top: 40px;
+    vertical-align: top;
+}
+.feature3 h1 {
+    margin-top: 0px;
+    padding-top: 0px;
+}
+.margininput {
+    margin:0 20px 20px 20px;
 }
 .box {
      border-radius: 4px;
@@ -70,4 +79,6 @@ h2{
 .row-submit {
     float:right;
 }
+
+
 
