--- a/public/css/views/home.css
+++ b/public/css/views/home.css
@@ -34,10 +34,6 @@ body{
 	margin-bottom: 70px;
 	text-align: center;
 } 
-h2{
-	text-align:center;
-	padding-bottom: 20px;
-}
 .card-p{
 	text-align:center;
 	padding-left:15px;
@@ -59,12 +55,16 @@ h2{
     margin-top: 40px;
     vertical-align: top;
 }
+.custombutton {
+    margin-bottom: 23px;
+}
 .feature3 h1 {
     margin-top: 0px;
     padding-top: 0px;
 }
-.margininput {
-    margin:0 20px 20px 20px;
+.feature3 h2 {
+    text-align:center;
+    margin: 0 0 25px 0;
 }
 .box {
      border-radius: 4px;
@@ -79,6 +79,10 @@ h2{
 .row-submit {
     float:right;
 }
+.form-group {
+    padding: 0 30px 0 30px;
+}
+
 
 
 
